syntax = "proto3";
import "lorawan.proto";
import "core.proto";

package core;

message DataUpHandlerReq {
    bytes       Payload     = 1;
    Metadata    Metadata    = 2;
    bytes       AppEUI      = 3;
    bytes       DevEUI      = 4;
    uint32      FCnt        = 5;
    uint32      MType       = 6;
}

message DataUpHandlerRes {
    LoRaWANData Payload     = 1;
    Metadata    Metadata    = 2;
}

message DataDownHandlerReq {
    bytes       Payload     = 1;
    bytes       AppEUI      = 2;
    bytes       DevEUI      = 3;
    string      TTL         = 4;
}

message DataDownHandlerRes {}

message JoinHandlerReq {
    bytes               AppEUI      = 1;
    bytes               DevEUI      = 2;
    bytes               DevNonce    = 3;
    bytes               MIC         = 4;
    Metadata            Metadata    = 5;
}

message JoinHandlerRes {
    LoRaWANJoinAccept   Payload     = 1;
    bytes               DevAddr     = 2;
    bytes               NwkSKey     = 3;
    Metadata            Metadata    = 4;
}

service Handler {
    rpc HandleDataUp            (DataUpHandlerReq)      returns (DataUpHandlerRes);
    rpc HandleDataDown          (DataDownHandlerReq)    returns (DataDownHandlerRes);
    rpc HandleJoin              (JoinHandlerReq)        returns (JoinHandlerRes);
}
